# share_2.x

./: AUTHORS  ChangeLog  DEPEND.txt  Doxygen-Documentation.md  Examples.md  Files.md  Home.md  INSTALL  Libshare-Meta.md  Libshare-Sharefs.md  Libshare-Socket.md  Libshare.md  Makefile  Makefile.am  Makefile.in  Modules.md  README.md  SHARE-VERSION-FILE  Sharelib-Filesystem.md  Sharelib-Meta.md  Sharelib-Socket.md  Sharelib.md  Structures.md  Structures.md.in  accept_8h_source.html  aclocal.m4  annotated.html  autogen.sh  bind_8h_source.html  classes.html  close_8h_source.html  config.h  config.h.in  config.h.in~  configure  configure.ac  connect_8h_source.html  doxygen.md  examples.html  files.html  (+50 more)
db/: Makefile.am  Makefile.in
db/libshare/geo/: network.json  zipcode.json
doc/: Makefile.am  Makefile.in  NEWS.in  RFC-ESP-DRAFT.txt.in  RFC-ESTP-DRAFT.txt.in  doxygen.conf  doxygen.conf.in  libshare_html.tar.xz
doc/RFC/: RFC-ESTP-DRAFT.txt.in
doc/java-share-lib/: Makefile.in  doxygen.conf.in
doc/libshare/: Makefile.am  Makefile.in
doc/man/man1/: share.1  shared.1  shcat.1  shcp.1  shls.1  shmkdir.1  shnet.1  shping.1  shrm.1
doc/man/man3/: bug.3  intro.3  intro_fs.3  libshare.3  libshare_buffer.3  libshare_error.3  libshare_fs.3  libshare_key.3  libshare_mem.3  libshare_membuf.3  libshare_memcrypt.3  libshare_memkey.3  libshare_memlock.3  libshare_memmeta.3  libshare_mempool.3  libshare_meta.3  libshare_net.3  libshare_net_esp.3  libshare_pref.3  libshare_socket.3  page_fs.3  sh_stdio_t.3  shbuf_t.3  shfile_t.3  shfs_hdr_t.3  shfs_ino_t.3  shfs_inode_hdr_t.3  shfs_journal_data_t.3  shfs_journal_t.3  shfs_t.3  shkey_t.3  shlock_t.3  shmeta_entry_t.3  shmeta_index_t.3  shmeta_t.3  shmeta_value_v1_t.3  shnet_t.3  shpeer_t.3  shpool_t.3  shrev_t.3  (+1 more)
doc/php-share-lib/: Makefile.in  doxygen.conf.in
doc/sexe/: Makefile.am  Makefile.in
doc/share-util/: Makefile.am  Makefile.in  doxygen.conf.in
doc/shared/: Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in  README.txt.in  card_login.c  shacc.c  shfs_inode_mkdir.c  shfs_inode_remote_copy.c  shfs_inode_remote_link.c  shkey.c  shkey.h  shkeystore.c  showloc.c  shpeer.c  shproc_lock.c  shtrace.c
examples/esl/: esl_client.c  esl_server.c
examples/sexe/: hash.lua  wakusei.lua  wakusei.sx
include/: Makefile.am  Makefile.in
src/java-share-lib/: Makefile.am  Makefile.in  jshare.i  jshare_wrap.c  jsl.java.in  jsl_desktop.java  libshare_java.i.in  test.java  test_libshare_java.in  test_libshare_java.java.in
src/java-share-lib/prebuild/: SWIGTYPE_p_fd_set.java  SWIGTYPE_p_hostent.java  SWIGTYPE_p_int32_t.java  SWIGTYPE_p_long.java  SWIGTYPE_p_p_char.java  SWIGTYPE_p_p_shbuf_t.java  SWIGTYPE_p_p_shfs_t.java  SWIGTYPE_p_p_shjson_t.java  SWIGTYPE_p_p_shkey_t.java  SWIGTYPE_p_p_shlock_t.java  SWIGTYPE_p_p_shmeta_t.java  SWIGTYPE_p_p_shpeer_t.java  SWIGTYPE_p_p_shpool_t.java  SWIGTYPE_p_p_uint8_t.java  SWIGTYPE_p_shbuf_t.java  SWIGTYPE_p_shfs_ino_t.java  SWIGTYPE_p_shfs_t.java  SWIGTYPE_p_shjson_t.java  SWIGTYPE_p_shkey_t.java  SWIGTYPE_p_shlock_t.java  SWIGTYPE_p_shmeta_t.java  SWIGTYPE_p_shpeer_t.java  SWIGTYPE_p_shpool_t.java  SWIGTYPE_p_shsig_t.java  SWIGTYPE_p_shsize_t.java  SWIGTYPE_p_shtime_t.java  SWIGTYPE_p_size_t.java  SWIGTYPE_p_sockaddr.java  SWIGTYPE_p_socklen_t.java  SWIGTYPE_p_ssize_t.java  SWIGTYPE_p_time_t.java  SWIGTYPE_p_timeval.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_uint64_t.java  SWIGTYPE_p_uint8_t.java  SWIGTYPE_p_unsigned_char.java  SWIGTYPE_p_void.java  (+4 more)
src/php-share-lib/: Makefile.am  Makefile.in  class_share_fs.php.in  class_shfile.php.in  libshare_php.i.in  test_libshare_php.php.in
src/share-cgb/: Makefile.am  Makefile.in  shcgbd.c  shcgbd.h  shcgbd_version.h
src/share-coin/: Makefile.am  Makefile.in  block_iface.cpp  server_iface.cpp  server_iface.h  shcoind.c  shcoind.h  shcoind_block.c  shcoind_block.h  shcoind_daemon.c  shcoind_daemon.h  shcoind_rpc.c  shcoind_tool.cpp  wallet_iface.cpp
src/share-daemon/: Makefile.am  Makefile.in  sharedaemon.c  sharedaemon.h  sharedaemon_app.c  sharedaemon_bcast.c  sharedaemon_bcast.h  sharedaemon_client.c  sharedaemon_client.h  sharedaemon_device.c  sharedaemon_device.h  sharedaemon_file.c  sharedaemon_peer.c  sharedaemon_server.c  sharedaemon_server.h  sharedaemon_store.c  sharedaemon_store.h
src/share-fsync-daemon/: Makefile.am  Makefile.in  fsync.h  fsync_cycle.h  fsync_user.c  fsync_user.h  pub_cycle.c  pub_file.c  pub_file.h  pub_scan.c  pub_scan.h  pub_server.c  pub_server.h  pub_user.c  pub_user.h
src/share-lib/: Makefile.am  Makefile.in  orig.gitig  share.c  share.h  share.h.in  share_base.h  share_macro.h  share_posix.c  share_version.h  share_version.h.in  shbuf.h  shcrc.h  sherr.h  shfile.h  shfs.h  shkey.h  shmem.h  shnet.h  shpeer.h  shpref.h  shsys.h  shtime.h  test_libshare.c.in
src/share-log/: Makefile.am  Makefile.in  sharelog.c  sharelog.h  sharelog_file.c  sharelog_scan.c  sharelog_server.c  sharelog_server.h  sharelog_test.h
src/share-pub-daemon/: Makefile.am  Makefile.in  TODO  pub_cycle.c  pub_cycle.h  pub_file.c  pub_file.h  pub_scan.c  pub_scan.h  pub_server.c  pub_server.h  pub_user.c  pub_user.h
src/share-util/: Makefile.am  Makefile.in  sharetool.c  sharetool.h  sharetool_alg.c  sharetool_appinfo.c  sharetool_arch.c  sharetool_arch.h  sharetool_cert.c  sharetool_cert.h  sharetool_db.c  sharetool_db.h  sharetool_file.c  sharetool_file.h  sharetool_fs.c  sharetool_geo.c  sharetool_info.c  sharetool_pam.c  sharetool_ping.c  sharetool_ping.h  sharetool_pkg.c  sharetool_pref.c  sharetool_pwd.c  sharetool_pwd.h  sharetool_rev.c  sharetool_scan.c  sharetool_scan.h  sharetool_server.c  sharetool_server.h  sharetool_test.c  sharetool_test.h  shnet.c  shnet.h  shnet_file.c  shnet_file.h  shnet_ping.c  shnet_scan.c  shnet_server.c  shnet_test.c
testing/: Makefile.am  Makefile.in  test_libshare.c  test_libshare_java.java.in  test_libshare_java.sh.in
wrap/java/: Makefile.am  Makefile.in  jshare.i  jshare_wrap.c
wrap/php/: Makefile.am  Makefile.in  php_phpshare.h  phpshare.i  phpshare.php  phpshare_wrap.c
(+1175 files in other folders)
