ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign
SUBDIRS = depend src/gnu src/share-lib src/sexe src/sexe/shell src/java-share-lib src/php-share-lib src/share-util src/share-daemon src/share-oauth-daemon/liboauth src/share-oauth-daemon/liboauth/tests src/share-oauth-daemon src/share-log src/share-coin doc examples include module bin
