ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src/gnu src/share-lib src/sexe src/sexe/shell src/share-ssl-lib src/java-share-lib src/php-share-lib src/share-oauth-lib src/share-oauth-lib/tests src/share-util src/share-daemon src/share-fsync-daemon src/share-log src/share-coin doc examples include module bin
