ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src/gnu src/share-lib src/sexe src/sexe/shell src/java-share-lib src/php-share-lib src/share-util src/share-daemon src/share-fsync-daemon src/share-log doc/libshare doc/sexe doc/share-util doc/shared doc/java-share-lib doc/php-share-lib examples include module bin
